--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website</title>
+  <title>Surya Mitra Solar</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Surya Mitra provides expert solar panel installation for homes, businesses, and hotels in Pune. Reduce electricity bills with clean energy. Book today!">
+  <meta name="keywords" content="solar panel installation Pune, home solar system, business solar Pune, hotel solar installation, renewable energy, save electricity bill">
+  <meta name="author" content="Surya Mitra">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph (For Social Media Sharing) -->
+  <meta property="og:title" content="Surya Mitra Solar">
+  <meta property="og:description" content="Switch to solar energy with Surya Mitra! We offer expert solar panel installation for homes, businesses, and hotels in Pune and surrounding areas.">
+  <meta property="og:image" content="./assets/images/logo.png">
+  <meta property="og:url" content="https://suryaamitra.com/">
+  <meta property="og:type" content="website">
+
+  <!-- Favicon (Website Logo) -->
+  <link rel="icon" href="./assets/images/logo.png" type="image/png">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://suryaamitra.com/">
+
+  <!-- External CSS -->
   <link rel="stylesheet" href="index.css">
 </head>
 
@@ -18,13 +39,12 @@
 
       <a href="#" class="logo">
         <img src="./assets/images/logo.png" alt="logo img" class="logo-icon">
-        <span class="logo-text">Surya Mitra</span>
+        <!-- <span class="logo-text">Surya Mitra</span> -->
       </a>
 
     </header>
   </div>
 
-  <!-- hero section -->
   <!-- Hero Section -->
 <div class="content">
   <section class="main-section">
@@ -84,7 +104,7 @@
   </footer>
 
   <div class="footer-copyright">
-    &copy; 2025 - Present <a href="https://surraymitra.com">SurrayMitra.com</a>. All rights reserved.
+    &copy; 2025 - Present <a href="https://suryaamitra.com/">SuryaaMitra.com</a>. All rights reserved.
   </div>
 
 </div>
