form link added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </p>
       <div class="button-group">
         <a  href="tel:+919011254516" class="start-button">Contact Us</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd34qY7rD7tfFiNx1bekPTRxCwSfU8nkUYgjiU3dw3wF8o-5Q/viewform?usp=header" target="_blank" class="tour-button">Free Consultation</a>
+        <a href="https://forms.gle/9b9gsc97cZTT8kLP9" target="_blank" class="tour-button">Free Consultation</a>
       </div>
     </div>
     <div class="content-right">
